@@ -1,6 +1,7 @@
 *** Changelog ***
 
 = 8.1.1 - xxxx-xx-xx =
+* Fix - Do not hide PRB on cart and product page when there are required custom checkout fields.
 * Fix - Issue with subscription renewal when the `start_date` of the mandate is set in the past.
 
 = 8.1.0 - 2024-03-28 =
